--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.6",
-    "@types/firebase": "^3.2.1",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.2",
+    "axios": "^0.27.2",
     "firebase": "^9.8.2",
     "graphql": "^16.5.0",
     "next": "12.1.6",
@@ -18,6 +21,8 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/firebase": "^3.2.1",
     "@types/node": "^17.0.38",
     "@types/react": "18.0.10",
     "eslint": "8.16.0",
