--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.6",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.8.2",
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
     "axios": "^0.27.2",
     "firebase": "^9.8.2",
     "graphql": "^16.5.0",
@@ -25,8 +24,11 @@
     "@types/firebase": "^3.2.1",
     "@types/node": "^17.0.38",
     "@types/react": "18.0.10",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   }
 }
