--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.6.6",
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
     "firebase": "^9.8.2",
     "graphql": "^16.5.0",
