--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.2",
+    "aws-sdk": "^2.1193.0",
     "axios": "^0.27.2",
+    "clsx": "^1.2.1",
     "firebase": "^9.8.2",
     "graphql": "^16.5.0",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/axios": "^0.14.0",
     "@types/firebase": "^3.2.1",
     "@types/node": "^17.0.38",
@@ -29,6 +32,7 @@
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
+    "tailwind-merge": "^1.5.1",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   }
