Implements anilist authentication flow

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "paths": {
       "@components/*": ["components/*"],
       "@utils/*": ["utils/*"],
-      "@services/*": ["services/*"]
+      "@services/*": ["services/*"],
+      "@backend/*": ["backend/*"]
     },
     "allowJs": true,
     "skipLibCheck": true,
