--- a/package.json
+++ b/package.json
@@ -18,16 +18,23 @@
     "clsx": "^1.2.1",
     "firebase": "^9.8.2",
     "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/axios": "^0.14.0",
     "@types/firebase": "^3.2.1",
+    "@types/js-cookie": "^3.0.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.38",
     "@types/react": "18.0.10",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
