--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,12 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["components/*"],
-      "@utils/*": ["utils/*"],
-      "@services/*": ["services/*"],
-      "@backend/*": ["backend/*"]
+      "@components/*": ["src/components/*"],
+      "@utils/*": ["src/utils/*"],
+      "@services/*": ["src/services/*"],
+      "@store/*": ["src/store/*"],
+      "@backend/*": ["src/backend/*"],
+      "@libs/*": ["src/libs/*"]
     },
     "allowJs": true,
     "skipLibCheck": true,
