--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^12.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-toastify": "^9.0.8",
     "uuid": "^8.3.2",
     "zustand": "^4.0.0"
   },
@@ -34,6 +35,7 @@
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.38",
     "@types/react": "18.0.10",
+    "@types/react-toastify": "^4.1.0",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.7",
     "eslint": "8.21.0",
