--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "17.0.2",
     "react-toastify": "^9.0.8",
     "uuid": "^8.3.2",
+    "zod": "^3.18.0",
     "zustand": "^4.0.0"
   },
   "devDependencies": {
