--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "aws-sdk": "^2.1193.0",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.7",
     "firebase": "^9.8.2",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
