--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-sdk": "^2.1193.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.7",
+    "express-rate-limit": "^6.7.0",
     "firebase": "^9.8.2",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
