--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_ANILIST_CLIENT_ID=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
+ANIPOOL_AWS_ACCESS_KEY_ID=
+ANIPOOL_AWS_SECRET_ACCESS_KEY=
+ANIPOOL_AWS_REGION=
 JWT_SECRET=
