--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.6",
-    "@formkit/auto-animate": "^1.0.0-beta.1",
+    "@formkit/auto-animate": "^1.0.0-beta.5",
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.2",
@@ -23,10 +23,11 @@
     "graphql-request": "^4.3.0",
     "jose": "^4.8.3",
     "js-cookie": "^3.0.1",
-    "next": "^12.2.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-toastify": "^9.0.8",
+    "sharp": "^0.31.3",
     "uuid": "^8.3.2",
     "zod": "^3.18.0",
     "zustand": "^4.0.0"
