--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.2",
+    "@vercel/analytics": "^0.1.6",
     "aws-sdk": "^2.1193.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.7",
