--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "anipool",
-  "version": "0.1.0",
+  "version": "0.2.0",
+  "versionName": "Shigeo",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -19,7 +20,6 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.7",
     "express-rate-limit": "^6.7.0",
-    "firebase": "^9.8.2",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "jose": "^4.8.3",
@@ -36,7 +36,6 @@
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/axios": "^0.14.0",
-    "@types/firebase": "^3.2.1",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.38",
     "@types/react": "18.0.10",
