--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "extends": "next/core-web-vitals",
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "no-unused-vars": "warn",
-    "no-console": "warn"
+    "@typescript-eslint/no-unused-vars": "error",
+    "no-console": "error"
   }
 }
