--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react": "18.0.10",
     "@types/react-toastify": "^4.1.0",
     "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.5",
