Implements sign up by discord

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,11 @@
-NEXT_PUBLIC_ANILIST_CLIENT_ID=
 ANIPOOL_AWS_ACCESS_KEY_ID=
 ANIPOOL_AWS_SECRET_ACCESS_KEY=
 ANIPOOL_AWS_REGION=
+
 JWT_SECRET=
+
+NEXT_PUBLIC_ANILIST_CLIENT_ID=
+NEXT_PUBLIC_DISCORD_AUTH_URL=
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_CALLBACK_URL=
