--- a/.env.local.example
+++ b/.env.local.example
@@ -5,7 +5,13 @@ ANIPOOL_AWS_REGION=
 JWT_SECRET=
 
 NEXT_PUBLIC_ANILIST_CLIENT_ID=
+
 NEXT_PUBLIC_DISCORD_AUTH_URL=
+
 TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
 TWITTER_CALLBACK_URL=
+
+NEXT_PUBLIC_MAL_CLIENT_ID=
+NEXT_PUBLIC_MAL_REDIRECT_URL=
+MAL_CLIENT_SECRET=
