--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.14",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwind-merge": "^1.5.1",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
