--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.38",
     "@types/react": "18.0.10",
+    "@types/react-dom": "^18.0.10",
     "@types/react-toastify": "^4.1.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
