--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "anipool",
-  "version": "0.5.1",
-  "versionName": "Mitsuha",
+  "version": "0.6.0",
+  "versionName": "Himeno-dev",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,7 +10,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.6",
     "@formkit/auto-animate": "^1.0.0-beta.5",
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^2.0.13",
