--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "anipool",
-  "version": "0.6.0",
-  "versionName": "Himeno",
+  "version": "0.7.0",
+  "versionName": "Rukia-dev",
   "private": true,
   "scripts": {
     "dev": "next dev",
