--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "jose": "^4.8.3",
+    "jotai": "^2.3.1",
     "js-cookie": "^3.0.1",
     "next": "^12.3.4",
     "oauth-1.0a": "^2.2.6",
