--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/analytics": "^0.1.6",
     "aws-sdk": "^2.1193.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "express-rate-limit": "^6.7.0",
     "graphql": "^16.5.0",
